--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -41,6 +41,7 @@
 <!--%= form_with model: @books, url: '/books', method: :post do |f| %>-->
 <%= form_with model:@book, local:true do |f| %>
 
+<!--エラーメッセージ表示-->
  <% if @book.errors.any? %>
  <style>
     .field_with_errors{
